--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   <!-- Home Section -->
   <section id="home" class="home">
     <div class="profile-img">
-     <img src="images/profile.jpg" alt="Ganga">
+  <img src="images/profile.jpeg" alt="Ganga">
+
 
 
     </div>
@@ -243,6 +244,7 @@
 
 </body>
 </html>
+
 
 
 
