--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Home Section -->
   <section id="home" class="home">
     <div class="profile-img">
- <img src="myphoto.jpg" alt="Ganga Profile">
+ <img src="Myphoto.jpg" alt="Ganga Profile">
 
 
 
@@ -245,6 +245,7 @@
 
 </body>
 </html>
+
 
 
 
